--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
-    implementation 'com.github.Tchisky:android-ktx:0.0.2'
+    implementation project(":android-ktx")
 }
